--- a/sfsdf.html
+++ b/sfsdf.html
@@ -91,7 +91,7 @@
 
     <!-- ฟุตเตอร์ -->
     <footer>
-        <p>© 2025 เว็บไซต์ตัวอย่าง</p>
+        <p>© 2025 เว็บไซต์ตัวอssย่าง</p>
     </footer>
 
 </body>
